// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Matches shallow shapshot 1`] = `
<Avatar
  customStyles={null}
  theme={
    Object {
      "avatar": "src-shared-components-Avatar-style___avatar___3QhkHA",
    }
  }
  url={null}
/>
`;

exports[`Matches shallow shapshot 2`] = `
<Avatar
  customStyles={null}
  theme={
    Object {
      "avatar": "src-shared-components-Avatar-style___avatar___3QhkHA",
    }
  }
  url="some-fake-string"
/>
`;

exports[`Matches shallow shapshot 3`] = `
<Avatar
  customStyles={null}
  theme={
    Object {
      "avatar": "test-style src-shared-components-Avatar-style___avatar___3QhkHA",
    }
  }
  url={null}
/>
`;

exports[`Matches shallow shapshot 4`] = `
<Avatar
  customStyles={null}
  theme={
    Object {
      "avatar": "test-style src-shared-components-Avatar-style___avatar___3QhkHA",
    }
  }
  url="some-fake-string"
/>
`;
